# LB-ANALYTICSENG-CASE-STUDY

./: README.md  pyproject.toml
config/: config.json  source_columns.json
ingestion/: main.py
ingestion/output_data/: output.parquet
transformations/: package-lock.yml  packages.yml
transformations/models/bi_core/: as_of_date.sql  h_lb__contracts.sql  h_lb__prices.sql  h_lb__products.sql  l_lb__contracts_products.sql  l_lb__prices_products.sql  pit_lb__contracts.sql  pit_lb__prices.sql  pit_lb__products.sql  s_lb__contracts.sql  s_lb__prices.sql  s_lb__products.sql
transformations/models/bi_import_ext/: src__lb.yml
transformations/models/bi_stage/: lb__contracts__stage.sql  lb__prices__stage.sql  lb__products__stage.sql
